alert window (Login page)

--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="container">
                     <div th:if="${error12}">
-                        <div class="alert alert-danger">
+                        <div class="alert">
                             Invalid username or password.
                         </div>
                     </div>
