--- a/src/main/resources/static/css/LoginPage.css
+++ b/src/main/resources/static/css/LoginPage.css
@@ -57,7 +57,7 @@ form {
     background-color: #f9f9f9;
     opacity: 0.98;
     width: 500px;
-    height: 700px;
+    height: 620px;
 }
 
 #abc {
@@ -91,6 +91,15 @@ form {
     opacity: 0.98;
     width: 500px;
 }
-.alert{
+.alert {
+    position: absolute;
+    border: #ff1322 2px solid;
+    padding: 10px;
+    margin-top: -22px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    color: #ffecea;
+    background-color: rgb(255, 61, 56);
     width: 460px;
 }
